[b]Version 0.6.0rc5[/b]:

(2008-04-19)
 * Don't get info about the files added automatically by the GUI to the 
   playlist (usually it's the file to play, so it's a waste of time).

(2008-04-18)
 * (Windows) Applied a patch by "hackykid" to fix a link error when compiling with
   Visual Studio.
   http://sourceforge.net/tracker/index.php?func=detail&aid=1924296&group_id=185512&atid=913575

(2008-04-17)
 * Updated the Italian and Polish translations.
 * (Bugfix) If the option to start videos in fullscreen is activated, now
   fullscreen mode will be entered only when the video is opened, and not for
   instance when you unpause the video.
 * (Windows) Added the exit fullscreen and close actions to the floating
   control widget, so their key shortcuts can work in the floating control.

(2008-04-16)
 * Now the mouse right click button can be configured. By default it will
   show the context menu. The context menu can also be assigned to another
   button (or key).
 * Added the open directory action to the systray menu. Fixes bug #1943895.


[b]Version 0.6.0rc4[/b]:

(2008-04-13)
 * Added the action next_osd to the list of actions available for mouse 
   buttons.

(2008-04-12)
 * Now the possibility to get info (length, name) about the files added to
   the playlist can be disabled. It's not in the preferences dialog as usual
   but in the playlist itself, as an option in the "add" menu.
 * Added the rewind and forward actions to the list of actions available for
   mouse buttons.

(2008-04-11)
 * Added support for the mouse XButton1 and XButton2. This is untested as
   my mouse doesn't have those buttons.

(2008-04-10)
 * Added in Preferences->General->Video an option to select the default
   deinterlacer. It will be used for new videos opened.

(2008-04-07)
 * Now when a file is added to the playlist, it will get some info about it.
   This allows to display the length and name (if available) in the list.
   Very useful for mp3 and similar.

(2008-04-06)